[package]
name = "realnvp_trading"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Team"]
description = "RealNVP Normalizing Flows for cryptocurrency trading on Bybit"
license = "MIT"
keywords = ["trading", "machine-learning", "normalizing-flows", "cryptocurrency", "bybit"]
categories = ["science", "finance"]

[lib]
name = "realnvp_trading"
path = "src/lib.rs"

[[example]]
name = "basic_realnvp"
path = "examples/basic_realnvp.rs"

[[example]]
name = "bybit_trading"
path = "examples/bybit_trading.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for Bybit API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math and linear algebra
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"

# Statistics
statrs = "0.16"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[features]
default = []
cuda = [] # Future: GPU acceleration
